Fix menu height on mobile

--- a/source/_styles/main.styl
+++ b/source/_styles/main.styl
@@ -28,4 +28,4 @@ a
 
 @media only screen and (max-width: 576px)
     .content
-        margin-top 47px
+        margin-top 43px
